fix to width of syntax highlight blocks to prevent word wrapping so often

--- a/_assets/stylesheets/_article.scss
+++ b/_assets/stylesheets/_article.scss
@@ -197,7 +197,7 @@ article {
         border: 0;
         border-radius: 2px;
         border-bottom:1px solid #eee;
-        width:100%;
+        width:120%;
         font-size:0.8em;
         overflow-x: auto;
         display:block;
